Day 50/ques/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  # Add hosts entry in node /etc/hosts to resolve names
  rules:
  - host: "iphone.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iphone-svc
            port:
              number: 80
  - host: "desktop.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: desktop-svc
            port:
              number: 80
